kubernetes/infrastructure/chengdu/traefik-redirect/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: global-http-redirect
  namespace: kube-system
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: PathPrefix(`/`)
      priority: 1
      middlewares:
        - name: redirect-to-https
      services:
        - name: noop@internal
          kind: TraefikService
